--- a/static/css/moderator_login.css
+++ b/static/css/moderator_login.css
@@ -2,6 +2,7 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
+/* color: white */
 }
 
 body {
@@ -10,7 +11,7 @@ font-family: "Abel", sans-serif;
 }
 
 .login {
-background: #fff;
+background: rgb(29, 5, 29);
 width: 350px;
 margin: 65px auto;
 display: flex;
@@ -22,11 +23,12 @@ box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
 .login h1 {
 padding: 35px 35px 0 35px;
 font-weight: 300;
-color: grey
+color: rgb(178, 171, 171)
 }
 .login h2 {
 padding: 35px 35px 0px 35px;
 font-weight: 300;
+color: white;
 }
 .login .content {
 padding: 35px;
@@ -42,13 +44,14 @@ font-family: 'Abel', sans-serif;
 width: 100%;
 padding: 10px 1px;
 border: 0;
-border-bottom: 1px solid #747474;
+background-color: rgb(251, 228, 251);
+border-bottom: 1px solid rgb(251, 228, 251);
 outline: none;
 }
 
 .login a.link {
 text-decoration: none;
-color: #747474;
+color: grey;
 letter-spacing: 0.2px;
 text-transform: uppercase;
 display: inline-block;
@@ -65,8 +68,8 @@ padding: 18px;
 font-family: 'Abel', sans-serif;
 /* cursor: pointer; */
 text-transform: uppercase;
-background: #e8e9ec;
-color: #777;
+background: rgb(91, 49, 91);
+color: grey;
 border-bottom-left-radius: 4px;
 border-bottom-right-radius: 0;
 letter-spacing: 0.2px;
