--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -10,6 +10,7 @@
       href="{{ url_for('static', filename='css/wrapper.css') }}"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
   </head>
   <body>
     <div class="container">
